--- a/card/web/WEB-INF/web.xml
+++ b/card/web/WEB-INF/web.xml
@@ -13,4 +13,14 @@
         <servlet-name>cardServlet</servlet-name>
         <url-pattern>/card</url-pattern>
     </servlet-mapping>
+
+    <servlet>
+        <servlet-name>managerServlet</servlet-name>
+        <servlet-class>servlet.managerServlet</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>managerServlet</servlet-name>
+        <url-pattern>/modify</url-pattern>
+    </servlet-mapping>
 </web-app>
